Modified Parser and File loaders The main editor window will now load common and events, memory consumption when loading vanilla files were around ~2GB. While the parser will parse most files correctly, there's currently no way of editing any of the loaded files unless specified by release.